# openvox-docs

./: .gitignore  .markdownlint.yaml  .rubocop.yml  .rubocop_todo.yml  404.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Gemfile  LICENSE  MAINTAINING.md  PDK.markdown  README.markdown  README_WRITING.markdown  Rakefile  WORKFLOW.md  _config.yml  config.ru  ecosystem-guide-implementation-plan.md  index.md  llms-full.txt  llms.txt  mkdocs.yml  package.json  puppet_docs.gemspec  requirements.txt  search.json
.github/: dependabot.yml
.github/workflows/: autopublish.yaml  build.yaml  deploy.yaml  link-check.yml  markdownlint.yml  mcp.yml  publish.yml  test.yml
_data/: agent_release_contents.yml  nav_map.yml  navigation.yml  openbolt_release_contents.yml  products.yml  social_links.yml  supported_platforms.yml
_data/agent_release_contents/: openvox_8x.yml
_data/nav/: ecosystem_8x.yaml  openbolt_5x.yml  openfact_5x.yaml  openvox-containers_latest.yml  openvox-server_8x.yml  (+2 more)
_includes/: broken_link_report.html  child_topics.html  nav-item.html  sidebar.html  version-selector.html
config/: deploy.rb
docs/: _ecosystem_latest  index.md
lib/: puppet_docs.rb  puppet_references.rb
source/: _config.yml  _config_amended.yml  config.ru  linkmunger.rb  mcollective
tools/mcp/: .gitignore  README.md  pyproject.toml  smoke_test.py
tools/mcp/demo/: demo.tape
tools/mcp/openvox_docs_mcp/: __init__.py  corpus.py  search.py  server.py
tools/mcp/tests/: conftest.py  test_corpus.py  test_search.py  test_server.py
util/: link_report.rb  mangle_files  unmangle_files
(+603 files in other folders)
