[project]
name = "openvox-docs-mcp"
version = "0.1.0"
description = "Local MCP server exposing the OpenVox documentation corpus (llms.txt / llms-full.txt)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
openvox-docs-mcp = "openvox_docs_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=openvox_docs_mcp --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
# __main__.py is a trivial `python -m` shim that can't run under coverage.
omit = ["openvox_docs_mcp/__main__.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openvox_docs_mcp"]
